--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ jar {
         }
     }
     manifest {
-        attributes 'Main-Class': 'com.spark.examples.WorstMovies'
+        attributes 'Main-Class': 'com.spark.examples.worstMovies.worstMoviesSPOY'
     }
 
     exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
